--- a/advisory.html
+++ b/advisory.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Organising Co-Chair</title>
+	<title>International/National Advisory Committee</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -79,17 +79,62 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Organising Co-Chair</h1>
+						<h1 class="text-uppercase">International/National Advisory Committee</h1>
 					</div>
 				</div>
 			</div>
 			<div class="container">
 				<div class="row justify-content-center ">
-					<div class="col-md-7 col-sm-12 com_names animated slideInRight">
-       
-     					<span class="glyphicon glyphicon-user"></span> Prof. S. Karthik, SRMIST, Chennai, India <br>
-<span class="glyphicon glyphicon-user"></span> Prof. G. Senthil kumar, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span> Prof. T. S. Shiny angel, SRMIST, Chennai, India<br>
+					<div class="col-md-6 col-sm-12 com_names hfix animated slideInRight">
+
+
+
+<span class="glyphicon glyphicon-user"></span>  Dr. D. Narayanan Rao, Director (Research), SRMIST, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. V. Kashmir Raja Dean (Research), SRMIST, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. B. Amutha, SRMIST,Chennai<br>
+ <span class="glyphicon glyphicon-user"></span> Dr. S. S. Sridhar, SRMIST, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. G. Vadivu, SRMIST, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. S. Rajendran, SRMIST, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. R. Subburaj, SRMIST, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. V. Ganapathy, SSRMIST, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Akhtar Kalam, VU, Australia<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Alfredo Vaccaro, US, Italy<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. David YU, UWM, US<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. A. Kannan, AU, Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Paul Rodriues, KKU, Saudi Arabia<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. V. Vijayakumar, VIT Chennai<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Gorazd Štumberger, UM, Slovenia<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Hussain Shareef, UKM, Malaysia<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Dan M Ionel,UKCE,Kentucky <br>
+<span class="glyphicon glyphicon-user"></span>    Dr. Mohamed A. Zohdy, OU, MI<Br>
+<span class="glyphicon glyphicon-user"></span>    Dr. Murad Al-Shibli, Head, EMET, Abu Dhabi<br>
+<span class="glyphicon glyphicon-user"></span>    Dr. Nesimi Ertugrul, UA, Australia<br>
+
+
+					</div>
+					<div class="col-md-6 col-sm-12 com_names hfix animated slideInRight">
+
+
+
+<span class="glyphicon glyphicon-user"></span>  Dr. Omar Abdel-Baqi, UWM, USA<br>
+<span class="glyphicon glyphicon-user"></span>      Dr.  Adel Nasiri, UWM, US<br>
+<span class="glyphicon glyphicon-user"></span>    Dr. Richard Blanchard, LBU, UK<Br>
+<span class="glyphicon glyphicon-user"></span>    Dr. Shashi Paul, DM, UK<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. AA Jimo, TUT, South Africa<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Zhao Xu, HKPU, Hong kong <br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Mohammad lutfi othman , Universiti Putra Malaysia<br> 
+<span class="glyphicon glyphicon-user"></span>     Dr. Sidhartha Panda, UCE, Burla<br>
+<span class="glyphicon glyphicon-user"></span>      Dr. Suresh Chandra Satapathy,ANITS, Vishakapatnam<br>
+<span class="glyphicon glyphicon-user"></span>      Dr. N Senthil kumar, MEPCO, TN<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. N.P. Padhy, IIT Roorkee<Br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Patnaik S.K, Anna University<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. Rama Reddy S, JCE<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. K.Shanti Swarup, IIT-Madras<br>
+<span class="glyphicon glyphicon-user"></span>  Dr. R K Behera, IIT Patna<br>
+<span class="glyphicon glyphicon-user"></span>    Dr. A K Pradhan, IIT Kharagpur<br>
+<span class="glyphicon glyphicon-user"></span>        Dr. Bijay Ketan Panigrahi, IIT Delhi<br>
+
+
 
 
 					</div>
